--- a/dhcpctl/Makefile.in
+++ b/dhcpctl/Makefile.in
@@ -303,6 +303,7 @@ mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
 pdfdir = @pdfdir@
+pkgcfg_found = @pkgcfg_found@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
 psdir = @psdir@
