[v4_1_esv] Fixed interface device naming for DLPI under Solaris 11
    Merges in rt37954.

--- a/includes/config.h.in
+++ b/includes/config.h.in
@@ -151,6 +151,9 @@
 /* Define to include server activity tracing support. */
 #undef TRACING
 
+/* Define to 1 if ethernet devices are in /dev/net */
+#undef USE_DEV_NET
+
 /* Define to include PIDs in syslog messages. */
 #undef USE_LOG_PID
 
