Fixed util/bindvar.sh error handling

--- a/configure.ac
+++ b/configure.ac
@@ -836,6 +836,9 @@ fi
         AC_MSG_ERROR([*** util/bindvar.sh failed])
     fi
 )
+if test $? -ne 0; then
+    exit $?
+fi
 
 cat > config.report << END
 
