--- a/client/tests/Makefile.in
+++ b/client/tests/Makefile.in
@@ -729,11 +729,13 @@ info:
 	@echo "ATF_LIBS=$(ATF_LIBS)"
 
 @HAVE_ATF_TRUE@check: $(ATF_TESTS)
-@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/client/tests/Atffile Atffile
-@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/client/tests/duid0_test.txt duid0_test.txt
-@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/client/tests/duid1_test.txt duid1_test.txt
-@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/client/tests/duid2_test.txt duid2_test.txt
-@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/client/tests/duid3_test.txt duid3_test.txt
+@HAVE_ATF_TRUE@	@if test $(top_srcdir) != ${top_builddir}; then \
+@HAVE_ATF_TRUE@		cp $(top_srcdir)/client/tests/Atffile Atffile; \
+@HAVE_ATF_TRUE@		cp $(top_srcdir)/client/tests/duid0_test.txt duid0_test.txt; \
+@HAVE_ATF_TRUE@		cp $(top_srcdir)/client/tests/duid1_test.txt duid1_test.txt; \
+@HAVE_ATF_TRUE@		cp $(top_srcdir)/client/tests/duid2_test.txt duid2_test.txt; \
+@HAVE_ATF_TRUE@		cp $(top_srcdir)/client/tests/duid3_test.txt duid3_test.txt; \
+@HAVE_ATF_TRUE@	fi
 @HAVE_ATF_TRUE@	sh ${top_builddir}/tests/unittest.sh
 
 @HAVE_ATF_TRUE@distclean-local:
