--- a/common/tests/Makefile.in
+++ b/common/tests/Makefile.in
@@ -762,7 +762,9 @@ uninstall-am:
 
 
 @HAVE_ATF_TRUE@check: $(ATF_TESTS)
-@HAVE_ATF_TRUE@	-cp -n $(top_srcdir)/common/tests/Atffile Atffile
+@HAVE_ATF_TRUE@	@if test $(top_srcdir) != ${top_builddir}; then \
+@HAVE_ATF_TRUE@		cp $(top_srcdir)/common/tests/Atffile Atffile; \
+@HAVE_ATF_TRUE@	fi
 @HAVE_ATF_TRUE@	sh ${top_builddir}/tests/unittest.sh
 
 @HAVE_ATF_TRUE@distclean-local:
