[rt20890] Minor wording changes in new configure warnings

--- a/configure.ac
+++ b/configure.ac
@@ -638,21 +638,21 @@ AC_ARG_ENABLE(kqueue,
 	want_kqueue="$enableval", want_kqueue="no")
 if test "$want_kqueue" = "yes"; then
 	BINDIOMUX="--enable-kqueue"
-	AC_MSG_WARN([--enable-kqueue is not supported: it can lead to some issue as server looping])
+	AC_MSG_WARN([--enable-kqueue is not supported: it may lead to issues such as server looping])
 fi
 AC_ARG_ENABLE(epoll,
 	AS_HELP_STRING([--enable-epoll],[use Linux epoll (default is no)]),
 	want_epoll="$enableval", want_epoll="no")
 if test "$want_epoll" = "yes"; then
 	BINDIOMUX="--enable-epoll"
-	AC_MSG_WARN([--enable-epoll is not supported: it can lead to some issue as server looping])
+	AC_MSG_WARN([--enable-epoll is not supported: it may lead to issues such as server looping])
 fi
 AC_ARG_ENABLE(devpoll,
 	AS_HELP_STRING([--enable-devpoll],[use /dev/poll (default is no)]),
 	want_devpoll="$enableval", want_devpoll="no")
 if test "$want_devpoll" = "yes"; then
 	BINDIOMUX="--enable-devpoll"
-	AC_MSG_WARN([--enable-devpoll is not supported: it can lead to some issue as server looping])
+	AC_MSG_WARN([--enable-devpoll is not supported: it may lead to issues such as server looping])
 fi
 AC_SUBST(BINDIOMUX)
 
